@@ -31,6 +31,11 @@
 #include <sys/types.h>
 #include <sys/wait.h>
 
+#include <libintl.h>
+#define _(String) gettext (String)
+#define gettext_noop(String) String
+#define N_(String) gettext_noop (String)
+
 #ifdef HAVE_ATTR_XATTR_H
 #include <attr/xattr.h>
 #endif /* HAVE_ATTR_XATTR_H */
