@@ -1,6 +1,7 @@
 xx Apr 2008: 0.5.8 Miek <miek@miek.nl>
   -- ?? --
- * stop ./configure when glib2-dev is not found
+ * exit ./configure when glib2-dev is not found
+ * substract the filesize when files are removed
 
 19 Mar 2008: 0.5.7 Miek <miek@miek.nl>
  -- spring cleaning --
